[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxstreem-python"
version = "0.1.0"
authors = [
  { name="SA", email="ayo@taxstreem.com" },
]
description = "TaxStreem API SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]